Security: Fix environment variables - separate client/server-side vars

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,35 @@
 # WhatsApp AI Customer Support Assistant - Environment Variables
 # Copy this file to .env and fill in your actual values
 
-# SUPABASE CONFIGURATION
+# CLIENT-SIDE VARIABLES (Safe to expose - prefixed with VITE_)
+# These will be included in your browser bundle and visible to users
+
+# SUPABASE CONFIGURATION (Public keys - safe to expose)
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
-# EVOLUTION API CONFIGURATION
+# EVOLUTION API CONFIGURATION (Public endpoint only)
 VITE_EVOLUTION_API_URL=https://your-evolution-api.com
-VITE_EVOLUTION_API_KEY=your-evolution-api-key
 
-# OPENAI CONFIGURATION
-VITE_OPENAI_API_KEY=sk-your-openai-api-key
-
-# GOOGLE DRIVE API CONFIGURATION
+# GOOGLE OAUTH CONFIGURATION (Client ID is public)
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-VITE_GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # APPLICATION CONFIGURATION
 VITE_APP_NAME="WhatsApp AI Assistant"
 VITE_APP_URL=http://localhost:5173
 VITE_WEBHOOK_URL=http://localhost:5173/api/webhook
+
+# SERVER-SIDE VARIABLES (Sensitive - NO VITE_ prefix)
+# These are kept secret and only used in server-side API routes
+
+# EVOLUTION API (Secret key - server-side only)
+EVOLUTION_API_KEY=your-evolution-api-key
+
+# OPENAI CONFIGURATION (Secret key - server-side only)
+OPENAI_API_KEY=sk-your-openai-api-key
+
+# SUPABASE SERVICE ROLE (Secret key - server-side only)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# GOOGLE OAUTH (Secret - server-side only)
+GOOGLE_CLIENT_SECRET=your-google-client-secret
