--- a/.env.example
+++ b/.env.example
@@ -8,21 +8,16 @@
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
-# EVOLUTION API CONFIGURATION (Public endpoint only)
-VITE_EVOLUTION_API_URL=https://your-evolution-api.com
-
-# GOOGLE OAUTH CONFIGURATION (Client ID is public)
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-
 # APPLICATION CONFIGURATION
 VITE_APP_NAME="WhatsApp AI Assistant"
 VITE_APP_URL=http://localhost:5173
 VITE_WEBHOOK_URL=http://localhost:5173/api/webhook
 
 # SERVER-SIDE VARIABLES (Sensitive - NO VITE_ prefix)
-# These are kept secret and only used in server-side API routes
+# These are kept secret and only used in server-side API routes/functions
 
-# EVOLUTION API (Secret key - server-side only)
+# EVOLUTION API CONFIGURATION (All server-side for security)
+EVOLUTION_API_URL=https://your-evolution-api.com
 EVOLUTION_API_KEY=your-evolution-api-key
 
 # OPENAI CONFIGURATION (Secret key - server-side only)
@@ -31,5 +26,11 @@ OPENAI_API_KEY=sk-your-openai-api-key
 # SUPABASE SERVICE ROLE (Secret key - server-side only)
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# GOOGLE OAUTH (Secret - server-side only)
+# GOOGLE OAUTH CONFIGURATION (All server-side for security)
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# SECURITY NOTE:
+# - Only VITE_ prefixed variables are exposed to the browser
+# - All API keys and secrets should be server-side only
+# - Frontend should call your API routes, not external APIs directly
