--- a/package.json
+++ b/package.json
@@ -1,55 +1,93 @@
 {
-  "name": "wa-cs-agent",
+  "name": "wacanda",
   "private": true,
   "version": "1.0.0",
-  "description": "WhatsApp AI Customer Support Assistant with RAG capabilities",
+  "description": "Wacanda - RAG-powered AI Customer Service Agent",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit",
-    "format": "prettier --write .",
     "test": "vitest",
-    "clean": "rm -rf dist node_modules/.vite",
-    "deploy": "npm run build && vercel --prod",
-    "create-test-user": "node scripts/create-test-user.js"
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run --reporter=verbose",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:performance": "k6 run tests/performance/load-test.js",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:ci": "vitest run --coverage && playwright test",
+    "validate": "npm run lint && npm run test:ci && npm run build",
+    "validate:phase6": "node scripts/validate-phase6.js",
+    "db:test": "supabase db test",
+    "db:reset": "supabase db reset",
+    "db:seed": "tsx scripts/seed-test-data.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.10",
-    "@tanstack/react-query": "^5.80.6",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.9.0",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
-    "file-saver": "^2.0.5",
-    "lucide-react": "^0.514.0",
-    "qrcode.js": "^0.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "recharts": "^2.15.3",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.9",
-    "zustand": "^5.0.5"
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@supabase/supabase-js": "^2.38.4",
+    "@tailwindcss/forms": "^0.5.7",
+    "date-fns": "^2.30.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "zustand": "^4.4.7",
+    "recharts": "^2.8.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-syntax-highlighter": "^15.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitest/ui": "^1.0.4",
+    "@vitest/coverage-v8": "^1.0.4",
+    "vitest": "^1.0.4",
+    "jsdom": "^23.0.1",
+    "msw": "^2.0.8",
+    
+    "@playwright/test": "^1.40.1",
+    
+    "storybook": "^7.6.3",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-interactions": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
+    "@storybook/blocks": "^7.6.3",
+    "@storybook/react": "^7.6.3",
+    "@storybook/react-vite": "^7.6.3",
+    "@storybook/testing-library": "^0.2.2",
+    
+    "tsx": "^4.4.0",
+    "supabase": "^1.123.4",
+    
+    "@types/k6": "^0.47.0",
+    "k6": "^0.47.0",
+    
+    "jest-environment-jsdom": "^29.7.0",
+    "@types/node": "^20.9.3"
   }
 }
